Inicia a estrutura do header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<!doctype html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Jornada Viagens</title>
+  </head>
+  <body>
+    <header>
+      <a href="#">
+        <img
+          src="img/header/logo-header-mobile.png"
+          alt="Logo jornada viagens da cor branco."
+        />
+      </a>
+      <img src="img/header/menu-header-mobile.png" alt="Menu" />
+      <nav>
+        <a href="#">Blog</a>
+        <a href="#">Pacotes de Viagens</a>
+        <a href="#">Contato</a>
+      </nav>
+    </header>
+  </body>
 </html>
