Cria estrutura do menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#">
+      <a href="index.html" title="Voltar para a página inicial">
         <img
           src="img/header/logo-header-mobile.png"
           alt="Logo jornada viagens da cor branco."
@@ -16,9 +16,15 @@
       </a>
       <img src="img/header/menu-header-mobile.png" alt="Menu" />
       <nav>
-        <a href="#">Blog</a>
-        <a href="#">Pacotes de Viagens</a>
-        <a href="#">Contato</a>
+        <ul>
+          <li>
+            <a href="blog.html" target="_blank" title="Acessar nosso blog">Blog</a>
+            <a href="pacotes.html" target="_blank" title="Acessar pacotes de viagens"
+              >Pacotes de Viagens</a
+            >
+            <a href="contato" target="_blank" title="Acessar contato">Contato</a>
+          </li>
+        </ul>
       </nav>
     </header>
   </body>
