--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Jornada Viagens</title>
   </head>
   <body>
     <header>
-      <a href="index.html" title="Voltar para a página inicial">
+      <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
           src="img/header/logo-header-mobile.png"
           alt="Logo jornada viagens da cor branco."
@@ -18,11 +18,22 @@
       <nav>
         <ul>
           <li>
-            <a href="blog.html" target="_blank" title="Acessar nosso blog">Blog</a>
-            <a href="pacotes.html" target="_blank" title="Acessar pacotes de viagens"
+            <a href="blog.html" target="_blank" title="Acessar nosso blog"
+              >Blog</a
+            >
+          </li>
+          <li>
+            <a
+              href="pacotes.html"
+              target="_blank"
+              title="Acessar pacotes de viagens"
               >Pacotes de Viagens</a
             >
-            <a href="contato" target="_blank" title="Acessar contato">Contato</a>
+          </li>
+          <li>
+            <a href="contato" target="_blank" title="Acessar contato"
+              >Contato</a
+            >
           </li>
         </ul>
       </nav>
