Adiciona flexbox ao header

--- a/index.html
+++ b/index.html
@@ -14,29 +14,32 @@
           alt="Logo jornada viagens da cor branco."
         />
       </a>
-      <img src="img/header/menu-header-mobile.png" alt="Menu" />
-      <nav>
-        <ul>
-          <li>
-            <a href="blog.html" target="_blank" title="Acessar nosso blog"
-              >Blog</a
-            >
-          </li>
-          <li>
-            <a
-              href="pacotes.html"
-              target="_blank"
-              title="Acessar pacotes de viagens"
-              >Pacotes de Viagens</a
-            >
-          </li>
-          <li>
-            <a href="contato" target="_blank" title="Acessar contato"
-              >Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
+
+      <div class="navigation-menu">
+        <img src="img/header/menu-header-mobile.png" alt="Menu" />
+        <nav>
+          <ul>
+            <li>
+              <a href="blog.html" target="_blank" title="Acessar nosso blog"
+                >Blog</a
+              >
+            </li>
+            <li>
+              <a
+                href="pacotes.html"
+                target="_blank"
+                title="Acessar pacotes de viagens"
+                >Pacotes de Viagens</a
+              >
+            </li>
+            <li>
+              <a href="contato" target="_blank" title="Acessar contato"
+                >Contato</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
   </body>
 </html>
