--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       </a>
 
       <div class="navigation-menu">
-        <img src="img/header/menu-header-mobile.png" alt="Menu" />
+        <label for="menu">
+          <img src="img/header/menu-header-mobile.png" alt="Menu" />
+        </label>
+        <input type="checkbox" id="menu" hidden/>
         <nav>
           <ul>
             <li>
