Adiciona estilo para menu desktop

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <header>
       <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
+          class="logo-mobile"
           src="img/header/logo-header-mobile.png"
           alt="Logo jornada viagens da cor branco."
+        />
+        <img
+          class="logo-desktop"
+          src="img/header/Logo-header-desktop.png"
+          alt="Logo jornada viagens da cor branco"
         />
       </a>
 
@@ -19,7 +25,7 @@
         <label for="menu">
           <img src="img/header/menu-header-mobile.png" alt="Menu" />
         </label>
-        <input type="checkbox" id="menu" hidden/>
+        <input type="checkbox" id="menu" hidden />
         <nav>
           <ul class="list-links">
             <li>
