--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header>
       <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
-          class="logo-mobile"
+          class="img-mobile"
           src="img/header/logo-header-mobile.png"
           alt="Logo jornada viagens da cor branco."
         />
         <img
-          class="logo-desktop"
+          class="img-desktop"
           src="img/header/Logo-header-desktop.png"
           alt="Logo jornada viagens da cor branco"
         />
@@ -50,5 +50,18 @@
         </nav>
       </div>
     </header>
+
+    <section>
+      <img
+        src="img/hero/Banner-hero-mobile.jpg"
+        alt="Homem em canoa em um rio de água azul cristalina."
+      />
+
+      <h2>
+        Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
+        à seleção das atividades, cuidamos de todos os detalhes para que você
+        aproveite ao máximo cada momento da sua jornada!
+      </h2>
+    </section>
   </body>
 </html>
