Adiciona imagem na sessao hero

--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
       </div>
     </header>
 
-    <section>
-      <img
-        src="img/hero/Banner-hero-mobile.jpg"
-        alt="Homem em canoa em um rio de água azul cristalina."
-      />
-
+    <section class="hero">
+      <div class="hero-img"></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
         à seleção das atividades, cuidamos de todos os detalhes para que você
