--- a/index.html
+++ b/index.html
@@ -78,6 +78,45 @@
             <a href="#" class="button">Ver detalhes</a>
           </footer>
         </article>
+
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Japão <br>
+              <span>R$ 4000</span>
+            </h3>
+          </header>
+          <footer>
+            <a href="#" class="button">Ver detalhes</a>
+          </footer>
+        </article>
+
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Japão <br>
+              <span>R$ 4000</span>
+            </h3>
+          </header>
+          <footer>
+            <a href="#" class="button">Ver detalhes</a>
+          </footer>
+        </article>
+
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Japão <br>
+              <span>R$ 4000</span>
+            </h3>
+          </header>
+          <footer>
+            <a href="#" class="button">Ver detalhes</a>
+          </footer>
+        </article>
       </div>
     </section>
   </body>
