--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <hr />
       </div>
       <div class="offers-cards">
-        <article class="card">
+        <article class="card japao">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -79,7 +79,7 @@
           </footer>
         </article>
 
-        <article class="card">
+        <article class="card san-andreas">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -92,7 +92,7 @@
           </footer>
         </article>
 
-        <article class="card">
+        <article class="card paraiba">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -105,7 +105,7 @@
           </footer>
         </article>
 
-        <article class="card">
+        <article class="card manaus">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
