Finaliza a sessao busca por categorias

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
-              Japão <br>
+              Japão <br />
               <span>R$ 4000</span>
             </h3>
           </header>
@@ -83,7 +83,7 @@
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
-              Japão <br>
+              Japão <br />
               <span>R$ 4000</span>
             </h3>
           </header>
@@ -96,7 +96,7 @@
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
-              Japão <br>
+              Japão <br />
               <span>R$ 4000</span>
             </h3>
           </header>
@@ -109,7 +109,7 @@
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
-              Japão <br>
+              Japão <br />
               <span>R$ 4000</span>
             </h3>
           </header>
@@ -117,6 +117,75 @@
             <a href="#" class="button">Ver detalhes</a>
           </footer>
         </article>
+      </div>
+    </section>
+
+    <section class="categories">
+      <div class="section-title">
+        <h2>Busque por Categoria</h2>
+        <hr />
+      </div>
+      <div class="categories-cards">
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria pacotes nacionais."
+        >
+          <img
+            src="img/categories/pacotes-nacionais.png"
+            alt="Ícone cinza de uma pessoa fazendo tracking."
+          />
+          <h3>
+            Pacotes <br />
+            Nacionais
+          </h3>
+        </a>
+
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria pacotes internacionais."
+        >
+          <img
+            src="img/categories/pacotes-interacionais.png"
+            alt="Ícone cinza de um avião."
+          />
+          <h3>
+            Pacotes <br />
+            Internacionais
+          </h3>
+        </a>
+
+        <a
+          class="card single-line transfer"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria transfer."
+        >
+          <img
+            src="img/categories/transfer.png"
+            alt="Ícone cinza de uma van de viagem."
+          />
+          <h3>Transfer</h3>
+        </a>
+
+        <a
+          class="card single-line"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria seguro viagens."
+        >
+          <img
+            src="img/categories/seguro-viagem.png"
+            alt="Ícone cinza de um globo terrestre."
+          />
+          <h3>
+            Seguro <br />
+            Viagens
+          </h3>
+        </a>
       </div>
     </section>
   </body>
